bookstore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-app
  template:
    metadata:
      labels:
        app: bookstore-app
    spec:
      containers:
        - name: bookstore-container
          image: conta/repositorio
          ports:
            - containerPort: 80
