bookstore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-service
spec:
  type: NodePort
  selector:
    app: bookstore-app
  ports:
    - port: 8088
      targetPort: 80
      protocol: TCP
      nodePort: 30088
