bookstore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
spec:
  rules:
    - host: mybookstore.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstore-service
                port:
                  number: 8088
